################################################################################
cmake_minimum_required (VERSION 3.11)
################################################################################
message ("CMake version: " ${CMAKE_VERSION})
################################################################################

################################################################################
# Project properties
################################################################################

project ("VirtualMethodCallPerformance")

add_executable (${PROJECT_NAME}
  "Sources/main.cpp"
)
